# bn-ppc64

./: .gitignore  decode.inc.cpp  decode_macros.h  disasm.cpp  disasm.h  il.cpp  il.h  intrinsics.h  meson.build  plugin.cpp  ppc64_arch.h
